перед использованием Sass

--- a/src/index.html
+++ b/src/index.html
@@ -133,125 +133,111 @@
               </p>
             </div>
           </div>
-        </div>
-        <!-- advantages row block end -->
-        <!-- advantages row block start -->
-        <div class="row advantages_row">
-          <div class="col-md-6 advantages_item">
-            <div class="advantages_round">
-              <img
-                src="/src/image/advantages_img/row2_1.png"
-                alt="img"
-                class="advantages_icons"
-              />
-            </div>
-            <div class="advantages_descr">
-              <h3>Высокий доход с гарантированными выплатами</h3>
-              <p>
-                Мы выплачиваем заработную плату на личную банковскую карту
-                водителя! Вам не нужно оформлять ООО, ИП, платить налоги,
-                подавать декларацию, оплачивать бухгалтерские услуги и ведение
-                банковского счета.
-              </p>
-            </div>
+        <div class="col-md-6 advantages_item">
+          <div class="advantages_round">
+            <img
+              src="/src/image/advantages_img/row2_1.png"
+              alt="img"
+              class="advantages_icons"
+            />
           </div>
-          <div class="col-md-6 advantages_item">
-            <div class="advantages_round">
-              <img
-                src="/src/image/advantages_img/row2_2.png"
-                alt="img"
-                class="advantages_icons"
-              />
-            </div>
-            <div class="advantages_descr">
-              <h3>Работа в удобное время, никаких графиков</h3>
-              <p>
-                Вы просто нажимаете кнопку выйти на линию для начала работы,
-                когда решите закончить, нажимаете выйти с линии. Вы можете
-                подрабатывать только утром, вечером, в выходные или праздничные
-                дни!
-              </p>
-            </div>
+          <div class="advantages_descr">
+            <h3>Высокий доход с гарантированными выплатами</h3>
+            <p>
+              Мы выплачиваем заработную плату на личную банковскую карту
+              водителя! Вам не нужно оформлять ООО, ИП, платить налоги, подавать
+              декларацию, оплачивать бухгалтерские услуги и ведение банковского
+              счета.
+            </p>
           </div>
         </div>
-        <!-- advantages row block end -->
-        <!-- advantages row block start -->
-        <div class="row advantages_row">
-          <div class="col-md-6 advantages_item">
-            <div class="advantages_round">
-              <img
-                src="/src/image/advantages_img/row3_1.png"
-                alt="img"
-                class="advantages_icons"
-              />
-            </div>
-            <div class="advantages_descr">
-              <h3>Комфортное, прозрачное и простое подключение</h3>
-              <p>
-                Мы подключаем дистанционно и бесплатно, Вам нет необходимости
-                приезжать к нам! Вы присылаете нам копии документов, мы
-                регистрируем Вас и присылаем данные для подключения, через 1-2
-                дня Вы можете начинать работать!
-              </p>
-            </div>
+        <div class="col-md-6 advantages_item">
+          <div class="advantages_round">
+            <img
+              src="/src/image/advantages_img/row2_2.png"
+              alt="img"
+              class="advantages_icons"
+            />
           </div>
-          <div class="col-md-6 advantages_item">
-            <div class="advantages_round">
-              <img
-                src="/src/image/advantages_img/row3_2.png"
-                alt="img"
-                class="advantages_icons"
-              />
-            </div>
-            <div class="advantages_descr">
-              <h3>Всегда большое количество заказов</h3>
-              <p>
-                Приложение показывает, где на данный момент больше всего заказов
-                и где действуют повышенные тарифы. У Вас не будет простоя и
-                холостых пробегов. Наши пассажиры всегда приятные и абсолютно
-                неконфликтные люди, которых приятно возить.
-              </p>
-            </div>
+          <div class="advantages_descr">
+            <h3>Работа в удобное время, никаких графиков</h3>
+            <p>
+              Вы просто нажимаете кнопку выйти на линию для начала работы, когда
+              решите закончить, нажимаете выйти с линии. Вы можете подрабатывать
+              только утром, вечером, в выходные или праздничные дни!
+            </p>
           </div>
         </div>
-        <!-- advantages row block end -->
-        <!-- advantages row block start -->
-        <div class="row advantages_row">
-          <div class="col-md-6 advantages_item">
-            <div class="advantages_round">
-              <img
-                src="/src/image/advantages_img/row4_1.png"
-                alt="img"
-                class="advantages_icons"
-              />
-            </div>
-            <div class="advantages_descr">
-              <h3>Круглосуточная поддержка</h3>
-              <p>
-                В Uber действует круглосуточная поддержка водителей по
-                электронной почте. Если что-то непонятно, Вы всегда можете
-                задать вопрос через On-line консультацию.
-              </p>
-            </div>
+        <div class="col-md-6 advantages_item">
+          <div class="advantages_round">
+            <img
+              src="/src/image/advantages_img/row3_1.png"
+              alt="img"
+              class="advantages_icons"
+            />
           </div>
-          <div class="col-md-6 advantages_item">
-            <div class="advantages_round">
-              <img
-                src="/src/image/advantages_img/row4_2.png"
-                alt="img"
-                class="advantages_icons"
-              />
-            </div>
-            <div class="advantages_descr">
-              <h3>Без шашечек и наклеек</h3>
-              <p>
-                Вам не нужно менять цвет, устанавливать «шашки» на автомобиль и
-                обклеивать его наклейками.
-              </p>
-            </div>
+          <div class="advantages_descr">
+            <h3>Комфортное, прозрачное и простое подключение</h3>
+            <p>
+              Мы подключаем дистанционно и бесплатно, Вам нет необходимости
+              приезжать к нам! Вы присылаете нам копии документов, мы
+              регистрируем Вас и присылаем данные для подключения, через 1-2 дня
+              Вы можете начинать работать!
+            </p>
           </div>
         </div>
-        <!-- advantages row block end -->
+        <div class="col-md-6 advantages_item">
+          <div class="advantages_round">
+            <img
+              src="/src/image/advantages_img/row3_2.png"
+              alt="img"
+              class="advantages_icons"
+            />
+          </div>
+          <div class="advantages_descr">
+            <h3>Всегда большое количество заказов</h3>
+            <p>
+              Приложение показывает, где на данный момент больше всего заказов и
+              где действуют повышенные тарифы. У Вас не будет простоя и холостых
+              пробегов. Наши пассажиры всегда приятные и абсолютно неконфликтные
+              люди, которых приятно возить.
+            </p>
+          </div>
+        </div>
+        <div class="col-md-6 advantages_item">
+          <div class="advantages_round">
+            <img
+              src="/src/image/advantages_img/row4_1.png"
+              alt="img"
+              class="advantages_icons"
+            />
+          </div>
+          <div class="advantages_descr">
+            <h3>Круглосуточная поддержка</h3>
+            <p>
+              В Uber действует круглосуточная поддержка водителей по электронной
+              почте. Если что-то непонятно, Вы всегда можете задать вопрос через
+              On-line консультацию.
+            </p>
+          </div>
+        </div>
+        <div class="col-md-6 advantages_item">
+          <div class="advantages_round">
+            <img
+              src="/src/image/advantages_img/row4_2.png"
+              alt="img"
+              class="advantages_icons"
+            />
+          </div>
+          <div class="advantages_descr">
+            <h3>Без шашечек и наклеек</h3>
+            <p>
+              Вам не нужно менять цвет, устанавливать «шашки» на автомобиль и
+              обклеивать его наклейками.
+            </p>
+          </div>
+        </div>
+               <!-- advantages row block end -->
       </div>
       <!-- advantages container class end -->
     </section>
