исправил нек. стили. Начинаем использовать Sass

--- a/src/index.html
+++ b/src/index.html
@@ -94,8 +94,8 @@
     <!-- advantages section start -->
     <section class="advantages" id="advantages">
       <div class="container">
-        <div class="mini_heading">Преимущества</div>
-        <h2 class="advantages_heading">8 причин начать работать с нами</h2>
+        <div class="label_block">Преимущества</div>
+        <h2 class="title_heading">8 причин начать работать с нами</h2>
         <!-- advantages row block start -->
         <div class="row advantages_row">
           <div class="col-md-6 advantages_item">
@@ -247,7 +247,7 @@
     <!-- mobile app section start -->
     <section class="mobile_app">
       <div class="container">
-        <div class="mini_heading">Возможности</div>
+        <div class="label_block">Возможности</div>
       </div>
     </section>
   </body>
