--- a/src/index.html
+++ b/src/index.html
@@ -1,254 +1,276 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Uber taxi</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap&subset=cyrillic-ext"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/bootstrap-reboot.min.css" />
-    <link rel="stylesheet" href="css/bootstrap-grid.min.css" />
-    <link rel="stylesheet" href="css/style.min.css" />
-  </head>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<title>Uber taxi</title>
+		<link
+			href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap&subset=cyrillic-ext"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="css/bootstrap-reboot.min.css" />
+		<link rel="stylesheet" href="css/bootstrap-grid.min.css" />
+		<link rel="stylesheet" href="css/style.min.css" />
+	</head>
 
-  <body>
-    <header>
-      <nav>
-        <div class="container">
-          <ul class="menu">
-            <li class="menu_item">
-              <a href="#" class="menu_link">Главная</a>
-            </li>
-            <li class="menu_item">
-              <a href="#" class="menu_link">Со своим автомобилем</a>
-            </li>
-            <li class="menu_item">
-              <a href="#" class="menu_link">На автомобиле компании</a>
-            </li>
-            <li class="menu_item">
-              <a href="#" class="menu_link">Требования</a>
-            </li>
-            <li class="menu_item">
-              <a href="#" class="menu_link">Контакты</a>
-            </li>
-            <li class="menu_item">
-              <a href="#" class="menu_link">Оставить заявку</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-      <div class="subheader">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-4 offset-md-1">
-              <a href="#" class="subheader_logo"
-                ><img
-                  src="/src/image/subheader/subheader_logo/subheader_logo.png"
-                  alt="logotype"
-                  class="subheader_logo_img"
-              /></a>
-              <div class="subheader_official">
-                Официальный партнер Uber в Москве
-              </div>
-            </div>
-            <div class="col-md-2 offset-md-2 call_block">
-              <div class="subheader_call">Звоните нам ежедневно</div>
-              <a href="tel:84957970988" class="subheader_phone"
-                >8 495 797 09 88</a
-              >
-            </div>
-            <div class="col-md-2 call_btn_block">
-              <button class="subheader_btn">заказать звонок</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </header>
-    <section class="promo">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-10 offset-md-1">
-            <h1 class="promo_header">КОМПАНИЯ UBER PARTNERS!</h1>
-            <h2 class="promo_subheader">
-              ПРИГЛАШАЕМ ВОДИТЕЛЕЙ! НА СВОЕМ АВТО!
-            </h2>
-            <div class="promo_descr">
-              Компания UBER динамически развивающаяся. Компания на рынке
-              занимает лидирующее место среди таксомоторных компаний, Компания
-              абсолютно прозрачная вы можете контролировать все процессы у себя
-              в личном кабинете. Бонуcная система.Помимо выполненной работы по
-              заказам, компания начисляет бонусы за пиковое время.
-              <br /><br />
-              Мы одни из партнеров и зарекомендовали себя как одна из лучших
-              команд в городе Москве. Водители у нас зарабатывают от 80000-
-              120000 в месяц.
-            </div>
-            <button class="promo_btn">ОТПРАВИТЬ ЗАЯВКУ!</button>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- advantages section start -->
-    <section class="advantages" id="advantages">
-      <div class="container">
-        <div class="label_block">Преимущества</div>
-        <h2 class="title_heading">8 причин начать работать с нами</h2>
-        <!-- advantages row block start -->
-        <div class="row advantages_row">
-          <div class="col-md-6 advantages_item">
-            <div class="advantages_round">
-              <img
-                src="/src/image/advantages_img/row1_1.png"
-                alt="img"
-                class="advantages_icons"
-              />
-            </div>
-            <div class="advantages_descr">
-              <h3>Никаких наличных, оплата происходит автоматически</h3>
-              <p>
-                Стоимость поездки оплачивается пассажиром с привязанной
-                банковской карты, т.е. нет никаких рисков связанных с перевозкой
-                наличности как для пассажира, так и для водителя, Вам не нужно
-                искать мелкие деньги для размена.
-              </p>
-            </div>
-          </div>
-          <div class="col-md-6 advantages_item">
-            <div class="advantages_round">
-              <img
-                src="/src/image/advantages_img/row1_2.png"
-                alt="img"
-                class="advantages_icons"
-              />
-            </div>
-            <div class="advantages_descr">
-              <h3>Комиссия 8% + БОНУСЫ</h3>
-              <p>
-                У нас минимальная комиссия и мы выплачиваем бонусы за каждую
-                поездку, некоторые наши конкуренты оставляют бонусы себе. Мы
-                работаем честно и с нами водители зарабатывают больше!
-              </p>
-            </div>
-          </div>
-          <div class="col-md-6 advantages_item">
-            <div class="advantages_round">
-              <img
-                src="/src/image/advantages_img/row2_1.png"
-                alt="img"
-                class="advantages_icons"
-              />
-            </div>
-            <div class="advantages_descr">
-              <h3>Высокий доход с гарантированными выплатами</h3>
-              <p>
-                Мы выплачиваем заработную плату на личную банковскую карту
-                водителя! Вам не нужно оформлять ООО, ИП, платить налоги,
-                подавать декларацию, оплачивать бухгалтерские услуги и ведение
-                банковского счета.
-              </p>
-            </div>
-          </div>
-          <div class="col-md-6 advantages_item">
-            <div class="advantages_round">
-              <img
-                src="/src/image/advantages_img/row2_2.png"
-                alt="img"
-                class="advantages_icons"
-              />
-            </div>
-            <div class="advantages_descr">
-              <h3>Работа в удобное время, никаких графиков</h3>
-              <p>
-                Вы просто нажимаете кнопку выйти на линию для начала работы,
-                когда решите закончить, нажимаете выйти с линии. Вы можете
-                подрабатывать только утром, вечером, в выходные или праздничные
-                дни!
-              </p>
-            </div>
-          </div>
-          <div class="col-md-6 advantages_item">
-            <div class="advantages_round">
-              <img
-                src="/src/image/advantages_img/row3_1.png"
-                alt="img"
-                class="advantages_icons"
-              />
-            </div>
-            <div class="advantages_descr">
-              <h3>Комфортное, прозрачное и простое подключение</h3>
-              <p>
-                Мы подключаем дистанционно и бесплатно, Вам нет необходимости
-                приезжать к нам! Вы присылаете нам копии документов, мы
-                регистрируем Вас и присылаем данные для подключения, через 1-2
-                дня Вы можете начинать работать!
-              </p>
-            </div>
-          </div>
-          <div class="col-md-6 advantages_item">
-            <div class="advantages_round">
-              <img
-                src="/src/image/advantages_img/row3_2.png"
-                alt="img"
-                class="advantages_icons"
-              />
-            </div>
-            <div class="advantages_descr">
-              <h3>Всегда большое количество заказов</h3>
-              <p>
-                Приложение показывает, где на данный момент больше всего заказов
-                и где действуют повышенные тарифы. У Вас не будет простоя и
-                холостых пробегов. Наши пассажиры всегда приятные и абсолютно
-                неконфликтные люди, которых приятно возить.
-              </p>
-            </div>
-          </div>
-          <div class="col-md-6 advantages_item">
-            <div class="advantages_round">
-              <img
-                src="/src/image/advantages_img/row4_1.png"
-                alt="img"
-                class="advantages_icons"
-              />
-            </div>
-            <div class="advantages_descr">
-              <h3>Круглосуточная поддержка</h3>
-              <p>
-                В Uber действует круглосуточная поддержка водителей по
-                электронной почте. Если что-то непонятно, Вы всегда можете
-                задать вопрос через On-line консультацию.
-              </p>
-            </div>
-          </div>
-          <div class="col-md-6 advantages_item">
-            <div class="advantages_round">
-              <img
-                src="/src/image/advantages_img/row4_2.png"
-                alt="img"
-                class="advantages_icons"
-              />
-            </div>
-            <div class="advantages_descr">
-              <h3>Без шашечек и наклеек</h3>
-              <p>
-                Вам не нужно менять цвет, устанавливать «шашки» на автомобиль и
-                обклеивать его наклейками.
-              </p>
-            </div>
-          </div>
-        </div>
-        <!-- advantages row block end -->
-      </div>
-      <!-- advantages container class end -->
-    </section>
-    <!-- advantages section end -->
-    <!-- mobile app section start -->
-    <section class="mobile_app">
-      <div class="container">
-        <div class="label_block">Возможности</div>
-      </div>
-    </section>
-  </body>
+	<body>
+		<header>
+			<nav>
+				<div class="container">
+					<ul class="menu">
+						<li class="menu_item">
+							<a href="#" class="menu_link">Главная</a>
+						</li>
+						<li class="menu_item">
+							<a href="#" class="menu_link"
+								>Со своим автомобилем</a
+							>
+						</li>
+						<li class="menu_item">
+							<a href="#" class="menu_link"
+								>На автомобиле компании</a
+							>
+						</li>
+						<li class="menu_item">
+							<a href="#" class="menu_link">Требования</a>
+						</li>
+						<li class="menu_item">
+							<a href="#" class="menu_link">Контакты</a>
+						</li>
+						<li class="menu_item">
+							<a href="#" class="menu_link">Оставить заявку</a>
+						</li>
+					</ul>
+				</div>
+			</nav>
+			<div class="subheader">
+				<div class="container">
+					<div class="row">
+						<div class="col-md-4 offset-md-1">
+							<a href="#" class="subheader_logo"
+								><img
+									src="/src/image/subheader/subheader_logo/subheader_logo.png"
+									alt="logotype"
+									class="subheader_logo_img"
+							/></a>
+							<div class="subheader_official">
+								Официальный партнер Uber в Москве
+							</div>
+						</div>
+						<div class="col-md-2 offset-md-2 call_block">
+							<div class="subheader_call">
+								Звоните нам ежедневно
+							</div>
+							<a href="tel:84957970988" class="subheader_phone"
+								>8 495 797 09 88</a
+							>
+						</div>
+						<div class="col-md-2 call_btn_block">
+							<button class="subheader_btn">
+								заказать звонок
+							</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</header>
+		<section class="promo">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-10 offset-md-1">
+						<h1 class="promo_header">КОМПАНИЯ UBER PARTNERS!</h1>
+						<h2 class="promo_subheader">
+							ПРИГЛАШАЕМ ВОДИТЕЛЕЙ! НА СВОЕМ АВТО!
+						</h2>
+						<div class="promo_descr">
+							Компания UBER динамически развивающаяся. Компания на
+							рынке занимает лидирующее место среди таксомоторных
+							компаний, Компания абсолютно прозрачная вы можете
+							контролировать все процессы у себя в личном
+							кабинете. Бонуcная система.Помимо выполненной работы
+							по заказам, компания начисляет бонусы за пиковое
+							время.
+							<br /><br />
+							Мы одни из партнеров и зарекомендовали себя как одна
+							из лучших команд в городе Москве. Водители у нас
+							зарабатывают от 80000- 120000 в месяц.
+						</div>
+						<button class="promo_btn">ОТПРАВИТЬ ЗАЯВКУ!</button>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- advantages section start -->
+		<section class="advantages" id="advantages">
+			<div class="container">
+				<div class="label_block">Преимущества</div>
+				<h2 class="title_heading">8 причин начать работать с нами</h2>
+				<!-- advantages row block start -->
+				<div class="row advantages_row">
+					<div class="col-md-6 advantages_item">
+						<div class="advantages_round">
+							<img
+								src="/src/image/advantages_img/row1_1.png"
+								alt="img"
+								class="advantages_icons"
+							/>
+						</div>
+						<div class="advantages_descr">
+							<h3>
+								Никаких наличных, оплата происходит
+								автоматически
+							</h3>
+							<p>
+								Стоимость поездки оплачивается пассажиром с
+								привязанной банковской карты, т.е. нет никаких
+								рисков связанных с перевозкой наличности как для
+								пассажира, так и для водителя, Вам не нужно
+								искать мелкие деньги для размена.
+							</p>
+						</div>
+					</div>
+					<div class="col-md-6 advantages_item">
+						<div class="advantages_round">
+							<img
+								src="/src/image/advantages_img/row1_2.png"
+								alt="img"
+								class="advantages_icons"
+							/>
+						</div>
+						<div class="advantages_descr">
+							<h3>Комиссия 8% + БОНУСЫ</h3>
+							<p>
+								У нас минимальная комиссия и мы выплачиваем
+								бонусы за каждую поездку, некоторые наши
+								конкуренты оставляют бонусы себе. Мы работаем
+								честно и с нами водители зарабатывают больше!
+							</p>
+						</div>
+					</div>
+					<div class="col-md-6 advantages_item">
+						<div class="advantages_round">
+							<img
+								src="/src/image/advantages_img/row2_1.png"
+								alt="img"
+								class="advantages_icons"
+							/>
+						</div>
+						<div class="advantages_descr">
+							<h3>Высокий доход с гарантированными выплатами</h3>
+							<p>
+								Мы выплачиваем заработную плату на личную
+								банковскую карту водителя! Вам не нужно
+								оформлять ООО, ИП, платить налоги, подавать
+								декларацию, оплачивать бухгалтерские услуги и
+								ведение банковского счета.
+							</p>
+						</div>
+					</div>
+					<div class="col-md-6 advantages_item">
+						<div class="advantages_round">
+							<img
+								src="/src/image/advantages_img/row2_2.png"
+								alt="img"
+								class="advantages_icons"
+							/>
+						</div>
+						<div class="advantages_descr">
+							<h3>Работа в удобное время, никаких графиков</h3>
+							<p>
+								Вы просто нажимаете кнопку выйти на линию для
+								начала работы, когда решите закончить, нажимаете
+								выйти с линии. Вы можете подрабатывать только
+								утром, вечером, в выходные или праздничные дни!
+							</p>
+						</div>
+					</div>
+					<div class="col-md-6 advantages_item">
+						<div class="advantages_round">
+							<img
+								src="/src/image/advantages_img/row3_1.png"
+								alt="img"
+								class="advantages_icons"
+							/>
+						</div>
+						<div class="advantages_descr">
+							<h3>
+								Комфортное, прозрачное и простое подключение
+							</h3>
+							<p>
+								Мы подключаем дистанционно и бесплатно, Вам нет
+								необходимости приезжать к нам! Вы присылаете нам
+								копии документов, мы регистрируем Вас и
+								присылаем данные для подключения, через 1-2 дня
+								Вы можете начинать работать!
+							</p>
+						</div>
+					</div>
+					<div class="col-md-6 advantages_item">
+						<div class="advantages_round">
+							<img
+								src="/src/image/advantages_img/row3_2.png"
+								alt="img"
+								class="advantages_icons"
+							/>
+						</div>
+						<div class="advantages_descr">
+							<h3>Всегда большое количество заказов</h3>
+							<p>
+								Приложение показывает, где на данный момент
+								больше всего заказов и где действуют повышенные
+								тарифы. У Вас не будет простоя и холостых
+								пробегов. Наши пассажиры всегда приятные и
+								абсолютно неконфликтные люди, которых приятно
+								возить.
+							</p>
+						</div>
+					</div>
+					<div class="col-md-6 advantages_item">
+						<div class="advantages_round">
+							<img
+								src="/src/image/advantages_img/row4_1.png"
+								alt="img"
+								class="advantages_icons"
+							/>
+						</div>
+						<div class="advantages_descr">
+							<h3>Круглосуточная поддержка</h3>
+							<p>
+								В Uber действует круглосуточная поддержка
+								водителей по электронной почте. Если что-то
+								непонятно, Вы всегда можете задать вопрос через
+								On-line консультацию.
+							</p>
+						</div>
+					</div>
+					<div class="col-md-6 advantages_item">
+						<div class="advantages_round">
+							<img
+								src="/src/image/advantages_img/row4_2.png"
+								alt="img"
+								class="advantages_icons"
+							/>
+						</div>
+						<div class="advantages_descr">
+							<h3>Без шашечек и наклеек</h3>
+							<p>
+								Вам не нужно менять цвет, устанавливать «шашки»
+								на автомобиль и обклеивать его наклейками.
+							</p>
+						</div>
+					</div>
+				</div>
+				<!-- advantages row block end -->
+			</div>
+			<!-- advantages container class end -->
+		</section>
+		<!-- advantages section end -->
+		<!-- mobile app section start -->
+		<section class="mobile_app">
+			<div class="container">
+				<div class="label_block">Возможности</div>
+			</div>
+		</section>
+	</body>
 </html>
