--- a/src/index.html
+++ b/src/index.html
@@ -104,8 +104,8 @@
 		<!-- advantages section start -->
 		<section class="advantages" id="advantages">
 			<div class="container">
-				<div class="label_block">Преимущества</div>
-				<h2 class="title_heading">8 причин начать работать с нами</h2>
+				<div class="label">Преимущества</div>
+				<h2 class="title">8 причин начать работать с нами</h2>
 				<!-- advantages row block start -->
 				<div class="row advantages_row">
 					<div class="col-md-6 advantages_item">
@@ -267,9 +267,10 @@
 		</section>
 		<!-- advantages section end -->
 		<!-- mobile app section start -->
-		<section class="mobile_app">
+		<section class="mobile">
 			<div class="container">
-				<div class="label_block">Возможности</div>
+				<div class="label">Возможности</div>
+				<h2 class="title">мобильное приложение убер</h2>
 			</div>
 		</section>
 	</body>
