--- a/src/index.html
+++ b/src/index.html
@@ -271,6 +271,10 @@
 			<div class="container">
 				<div class="label">Возможности</div>
 				<h2 class="title">мобильное приложение убер</h2>
+				<div class="subtitle">
+					Сделайте заказ, совершите поездку и оплатите ее стоимость,
+					используя свой мобильный телефон
+				</div>
 			</div>
 		</section>
 	</body>
