--- a/src/index.html
+++ b/src/index.html
@@ -282,7 +282,10 @@
 								оформление заказа одним касанием
 							</div>
 							<div class="mobile_item_plus">
-								<img src="image/mobile/plus_img/plus.png" alt="plus" />
+								<img
+									src="image/mobile/plus_img/plus.png"
+									alt="plus"
+								/>
 							</div>
 						</div>
 					</div>
@@ -292,7 +295,10 @@
 								надежная подача
 							</div>
 							<div class="mobile_item_plus">
-								<img src="image/mobile/plus_img/plus.png" alt="plus" />
+								<img
+									src="image/mobile/plus_img/plus.png"
+									alt="plus"
+								/>
 							</div>
 						</div>
 					</div>
@@ -302,7 +308,10 @@
 								прозрачные цены
 							</div>
 							<div class="mobile_item_plus">
-								<img src="image/mobile/plus_img/plus.png" alt="plus" />
+								<img
+									src="image/mobile/plus_img/plus.png"
+									alt="plus"
+								/>
 							</div>
 						</div>
 					</div>
@@ -312,7 +321,10 @@
 								безналичная оплата
 							</div>
 							<div class="mobile_item_plus">
-								<img src="image/mobile/plus_img/plus.png" alt="plus" />
+								<img
+									src="image/mobile/plus_img/plus.png"
+									alt="plus"
+								/>
 							</div>
 						</div>
 					</div>
@@ -322,7 +334,10 @@
 								обратная связь
 							</div>
 							<div class="mobile_item_plus">
-								<img src="image/mobile/plus_img/plus.png" alt="plus" />
+								<img
+									src="image/mobile/plus_img/plus.png"
+									alt="plus"
+								/>
 							</div>
 						</div>
 					</div>
@@ -332,12 +347,37 @@
 								разделить стоимость поездки
 							</div>
 							<div class="mobile_item_plus">
-								<img src="image/mobile/plus_img/plus.png" alt="plus" />
+								<img
+									src="image/mobile/plus_img/plus.png"
+									alt="plus"
+								/>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
+		<!-- mobile app section END -->
+		<!-- section choice START  -->
+		<section class="choice">
+			<div class="container">
+				<div class="label label_white">Возможности</div>
+				<h2 class="title title_white">Выбор - отличная штука!</h2>
+				<h3 class="subtitle subtitle_white">
+					Закажите автомобиль, который подходит вам по стилю и бюджету
+				</h3>
+				<div class="choice_car"></div>
+				<!-- 				<img
+					src="./image/choice_1/car.png"
+					alt="uber car"
+					class="choice_img"
+				/> -->
+				<div class="choice_descr">
+					Машины на каждый день.<br />
+					Лучше, быстрее и дешевле, чем такси
+				</div>
+			</div>
+		</section>
+		<!-- section choice END  -->
 	</body>
 </html>
