синтаксическое форматирование style.sass

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
 								Официальный партнер Uber в Москве
 							</div>
 						</div>
-						<div class="col-md-2 offset-md-2 call_block">
+						<div class="col-md-2 offset-md-2">
 							<div class="subheader_call">
 								Звоните нам ежедневно
 							</div>
@@ -66,7 +66,7 @@
 								>8 495 797 09 88</a
 							>
 						</div>
-						<div class="col-md-2 call_btn_block">
+						<div class="col-md-2">
 							<button class="subheader_btn">
 								заказать звонок
 							</button>
@@ -361,17 +361,20 @@
 		<!-- section choice START  -->
 		<section class="choice">
 			<div class="container">
+				<div class="black_bg"></div>
 				<div class="label label_white">Возможности</div>
 				<h2 class="title title_white">Выбор - отличная штука!</h2>
 				<h3 class="subtitle subtitle_white">
 					Закажите автомобиль, который подходит вам по стилю и бюджету
 				</h3>
-				<div class="choice_car"></div>
-				<!-- 				<img
-					src="./image/choice_1/car.png"
-					alt="uber car"
-					class="choice_img"
-				/> -->
+				<div class="img_block">
+					<img
+						src="./image/choice_1/car.png"
+						alt="uber car"
+						class="choice_img"
+					/>
+				</div>
+
 				<div class="choice_descr">
 					Машины на каждый день.<br />
 					Лучше, быстрее и дешевле, чем такси
