--- a/src/index.html
+++ b/src/index.html
@@ -281,12 +281,7 @@
 							<div class="mobile_item_subtitle">
 								оформление заказа одним касанием
 							</div>
-							<div class="mobile_item_plus">
-								<img
-									src="image/mobile/plus_img/plus.png"
-									alt="plus"
-								/>
-							</div>
+							<div class="mobile_item_plus"></div>
 						</div>
 					</div>
 					<div class="col-md-4">
@@ -294,12 +289,7 @@
 							<div class="mobile_item_subtitle">
 								надежная подача
 							</div>
-							<div class="mobile_item_plus">
-								<img
-									src="image/mobile/plus_img/plus.png"
-									alt="plus"
-								/>
-							</div>
+							<div class="mobile_item_plus"></div>
 						</div>
 					</div>
 					<div class="col-md-4">
@@ -307,12 +297,7 @@
 							<div class="mobile_item_subtitle">
 								прозрачные цены
 							</div>
-							<div class="mobile_item_plus">
-								<img
-									src="image/mobile/plus_img/plus.png"
-									alt="plus"
-								/>
-							</div>
+							<div class="mobile_item_plus"></div>
 						</div>
 					</div>
 					<div class="col-md-4">
@@ -320,12 +305,7 @@
 							<div class="mobile_item_subtitle">
 								безналичная оплата
 							</div>
-							<div class="mobile_item_plus">
-								<img
-									src="image/mobile/plus_img/plus.png"
-									alt="plus"
-								/>
-							</div>
+							<div class="mobile_item_plus"></div>
 						</div>
 					</div>
 					<div class="col-md-4">
@@ -333,12 +313,7 @@
 							<div class="mobile_item_subtitle">
 								обратная связь
 							</div>
-							<div class="mobile_item_plus">
-								<img
-									src="image/mobile/plus_img/plus.png"
-									alt="plus"
-								/>
-							</div>
+							<div class="mobile_item_plus"></div>
 						</div>
 					</div>
 					<div class="col-md-4">
@@ -346,12 +321,7 @@
 							<div class="mobile_item_subtitle">
 								разделить стоимость поездки
 							</div>
-							<div class="mobile_item_plus">
-								<img
-									src="image/mobile/plus_img/plus.png"
-									alt="plus"
-								/>
-							</div>
+							<div class="mobile_item_plus"></div>
 						</div>
 					</div>
 				</div>
