--- a/src/index.html
+++ b/src/index.html
@@ -352,5 +352,101 @@
 			</div>
 		</section>
 		<!-- section choice END  -->
+		<!-- request section START-->
+		<section class="required">
+			<div class="container">
+				<div class="label">Возможности</div>
+				<h2 class="title">условия и требования</h2>
+				<div class="row">
+					<!-- first reguired block start -->
+					<div class="col-md-6">
+						<div class="reguired_block">
+							<h3 class="reguired_title">
+								УСЛОВИЯ: со своим авто:
+							</h3>
+							<ul class="reguired_list">
+								<li>Подключаем к системе UBER под 10%.</li>
+								<li>Ни каких взносов 0%!</li>
+								<li>
+									Можем подключать удаленно без приезда в офис
+								</li>
+								<li>ИП не требуется</li>
+								<li>
+									Заказы распределяются без учета рейтинга
+									ближай-<br />шим водителям
+								</li>
+								<li>Работа только по безналичному расчету</li>
+								<li>
+									Деньги перечисляем на карту водителю или
+									наличны-<br />ми в офисе
+								</li>
+							</ul>
+							<div class="required_descr">
+								В день заработок составляет 7000-12000р + бонус
+								3000т рублей
+							</div>
+						</div>
+					</div>
+					<!-- first reguired block end -->
+					<!-- second reguired block start -->
+					<div class="col-md-6">
+						<div class="reguired_block">
+							<h3 class="reguired_title">
+								УСЛОВИЯ: на авто компании:
+							</h3>
+							<ul class="reguired_list">
+								<li>Предоставляем авто без залога</li>
+								<li>Без ежедневных выплат по аренде</li>
+								<li>
+									Среда пятница и суббота работа на компанию
+									осталь-<br />ные дни вы работаете на себя
+								</li>
+							</ul>
+						</div>
+					</div>
+					<!-- second reguired block end -->
+					<!-- third reguired block start -->
+					<div class="col-md-6">
+						<div class="reguired_block">
+							<h3 class="reguired_title">ТРЕБОВАНИЕ:</h3>
+							<ul class="reguired_list">
+								<li>Наличие автомобиля без рекламы</li>
+								<li>
+									Автомобиль не должен быть желтый и не с
+									желтыми номерами
+								</li>
+								<li>Машина не старше 3 лет</li>
+								<li>Стаж вождения не менее 3 лет</li>
+								<li>
+									Дивайс на системе андроид 4.0и выше(самсунг)
+								</li>
+							</ul>
+						</div>
+					</div>
+					<!-- third reguired block end -->
+					<!-- fourth reguired block start -->
+					<div class="col-md-6">
+						<div class="reguired_block">
+							<h3 class="reguired_title">ДОКУМЕНТЫ:</h3>
+							<ul class="reguired_list">
+								<li>Права 2 стороны</li>
+								<li>Паспорт лицевая сторона</li>
+								<li>СтС</li>
+								<li>Лицензия( если есть)</li>
+								<li>Номер телефона</li>
+								<li>
+									Номер карты для перечисления денег(указать в
+									письме)!
+								</li>
+							</ul>
+						</div>
+					</div>
+					<!-- fourth reguired block end -->
+				</div>
+				<!-- class row bootstrap end -->
+			</div>
+			<!-- container class end -->
+		</section>
+		<!-- request section END -->
 	</body>
 </html>
