fixid. It s ok \;\)

--- a/src/index.html
+++ b/src/index.html
@@ -358,13 +358,13 @@
 				<div class="label">Возможности</div>
 				<h2 class="title">условия и требования</h2>
 				<div class="row">
-					<!-- first reguired block start -->
+					<!-- first required block start -->
 					<div class="col-md-6">
-						<div class="reguired_block">
-							<h3 class="reguired_title">
+						<div class="required_block">
+							<h3 class="required_title">
 								УСЛОВИЯ: со своим авто:
 							</h3>
-							<ul class="reguired_list">
+							<ul class="required_list">
 								<li>Подключаем к системе UBER под 10%.</li>
 								<li>Ни каких взносов 0%!</li>
 								<li>
@@ -387,14 +387,14 @@
 							</div>
 						</div>
 					</div>
-					<!-- first reguired block end -->
-					<!-- second reguired block start -->
+					<!-- first required block end -->
+					<!-- second required block start -->
 					<div class="col-md-6">
-						<div class="reguired_block">
-							<h3 class="reguired_title">
+						<div class="required_block">
+							<h3 class="required_title">
 								УСЛОВИЯ: на авто компании:
 							</h3>
-							<ul class="reguired_list">
+							<ul class="required_list">
 								<li>Предоставляем авто без залога</li>
 								<li>Без ежедневных выплат по аренде</li>
 								<li>
@@ -404,12 +404,12 @@
 							</ul>
 						</div>
 					</div>
-					<!-- second reguired block end -->
-					<!-- third reguired block start -->
+					<!-- second required block end -->
+					<!-- third required block start -->
 					<div class="col-md-6">
-						<div class="reguired_block">
-							<h3 class="reguired_title">ТРЕБОВАНИЕ:</h3>
-							<ul class="reguired_list">
+						<div class="required_block">
+							<h3 class="required_title">ТРЕБОВАНИЕ:</h3>
+							<ul class="required_list">
 								<li>Наличие автомобиля без рекламы</li>
 								<li>
 									Автомобиль не должен быть желтый и не с
@@ -423,12 +423,12 @@
 							</ul>
 						</div>
 					</div>
-					<!-- third reguired block end -->
-					<!-- fourth reguired block start -->
+					<!-- third required block end -->
+					<!-- fourth required block start -->
 					<div class="col-md-6">
-						<div class="reguired_block">
-							<h3 class="reguired_title">ДОКУМЕНТЫ:</h3>
-							<ul class="reguired_list">
+						<div class="required_block">
+							<h3 class="required_title">ДОКУМЕНТЫ:</h3>
+							<ul class="required_list">
 								<li>Права 2 стороны</li>
 								<li>Паспорт лицевая сторона</li>
 								<li>СтС</li>
@@ -441,7 +441,7 @@
 							</ul>
 						</div>
 					</div>
-					<!-- fourth reguired block end -->
+					<!-- fourth required block end -->
 				</div>
 				<!-- class row bootstrap end -->
 			</div>
