--- a/src/index.html
+++ b/src/index.html
@@ -407,7 +407,7 @@
 					<!-- second required block end -->
 					<!-- third required block start -->
 					<div class="col-md-6">
-						<div class="required_block">
+						<div class="required_block warning">
 							<h3 class="required_title">ТРЕБОВАНИЕ:</h3>
 							<ul class="required_list">
 								<li>Наличие автомобиля без рекламы</li>
@@ -426,7 +426,7 @@
 					<!-- third required block end -->
 					<!-- fourth required block start -->
 					<div class="col-md-6">
-						<div class="required_block">
+						<div class="required_block warning">
 							<h3 class="required_title">ДОКУМЕНТЫ:</h3>
 							<ul class="required_list">
 								<li>Права 2 стороны</li>
