--- a/src/index.html
+++ b/src/index.html
@@ -15,31 +15,37 @@
 	</head>
 
 	<body>
-		<header>
-			<nav>
+		<header class="header">
+			<nav class="header_nav">
 				<div class="container">
-					<ul class="menu">
-						<li class="menu_item">
-							<a href="#" class="menu_link">Главная</a>
+					<ul class="header_nav_menu">
+						<li class="header_nav_menu_item">
+							<a href="#" class="header_nav_menu_link">Главная</a>
 						</li>
-						<li class="menu_item">
-							<a href="#" class="menu_link"
+						<li class="header_nav_menu_item">
+							<a href="#" class="header_nav_menu_link"
 								>Со своим автомобилем</a
 							>
 						</li>
-						<li class="menu_item">
-							<a href="#" class="menu_link"
+						<li class="header_nav_menu_item">
+							<a href="#" class="header_nav_menu_link"
 								>На автомобиле компании</a
 							>
 						</li>
-						<li class="menu_item">
-							<a href="#" class="menu_link">Требования</a>
+						<li class="header_nav_menu_item">
+							<a href="#" class="header_nav_menu_link"
+								>Требования</a
+							>
 						</li>
-						<li class="menu_item">
-							<a href="#" class="menu_link">Контакты</a>
+						<li class="header_nav_menu_item">
+							<a href="#" class="header_nav_menu_link"
+								>Контакты</a
+							>
 						</li>
-						<li class="menu_item">
-							<a href="#" class="menu_link">Оставить заявку</a>
+						<li class="header_nav_menu_item">
+							<a href="#" class="header_nav_menu_link"
+								>Оставить заявку</a
+							>
 						</li>
 					</ul>
 				</div>
@@ -448,5 +454,27 @@
 			<!-- container class end -->
 		</section>
 		<!-- request section END -->
+		<!-- world section start -->
+		<section class="sities">
+			<div class="container">
+				<div class="label label_white">города</div>
+				<h2 class="title title_white">По всему миру</h2>
+				<h3 class="subtitle subtitle_white">
+					Мы в вашем городе и по всему миру
+				</h3>
+				<a href="#" class="sities_link">посмотреть все города</a>
+			</div>
+		</section>
+		<!-- world section END -->
+		<!-- footer START -->
+		<footer class="footer">
+			<div class="footer_delimetr"></div>
+
+			<!-- 				<nav class="footer_nav">
+					<a href="#" class="footer_nav_link">на главную</a>
+					<a href="#" class="footer_nav_link">города</a>
+					<a href="#" class="footer_nav_link">для водителей</a>
+				</nav> -->
+		</footer>
 	</body>
 </html>
