изменил разметку в footer

--- a/src/index.html
+++ b/src/index.html
@@ -470,53 +470,71 @@
 		<footer class="footer">
 			<div class="footer_delimetr"></div>
 			<div class="footer_wrapper">
-				<div class="footer_social">
-					<a href="#" class="footer_social_link"
-						><img
-							src="./image/social_icon/facebook.svg"
-							alt="facebook_icon"
-							class="footer_social_img"
-					/></a>
-					<a href="#" class="footer_social_link"
-						><img
-							src="./image/social_icon/twitter.svg"
-							alt="twitter_icon"
-							class="footer_social_img"
-					/></a>
-					<a href="#" class="footer_social_link"
-						><img
-							src="./image/social_icon/linkedin.svg"
-							alt="linkedin_icon"
-							class="footer_social_img"
-					/></a>
-					<a href="#" class="footer_social_link"
-						><img
-							src="./image/social_icon/instagram.svg"
-							alt="instagram_icon"
-							class="footer_social_img"
-					/></a>
+				<div>
+					<div class="footer_social">
+						<a href="#" class="footer_social_link"
+							><img
+								src="./image/social_icon/facebook.svg"
+								alt="facebook_icon"
+								class="footer_social_img"
+						/></a>
+						<a href="#" class="footer_social_link"
+							><img
+								src="./image/social_icon/twitter.svg"
+								alt="twitter_icon"
+								class="footer_social_img"
+						/></a>
+						<a href="#" class="footer_social_link"
+							><img
+								src="./image/social_icon/linkedin.svg"
+								alt="linkedin_icon"
+								class="footer_social_img"
+						/></a>
+						<a href="#" class="footer_social_link"
+							><img
+								src="./image/social_icon/instagram.svg"
+								alt="instagram_icon"
+								class="footer_social_img"
+						/></a>
+					</div>
 				</div>
 				<!-- footer links start -->
-				<div class="footer_links">
-					<div class="footer_links_main">
-						<a href="#">на главную</a>
-						<a href="#">города</a>
-						<a href="#">для водителей</a>
+				<div>
+					<div class="footer_links">
+						<div class="footer_links_main">
+							<a href="#">на главную</a>
+							<a href="#">города</a>
+							<a href="#">для водителей</a>
+						</div>
+						<div class="footer_links_sub">
+							<a href="#">центр поддержки</a>
+							<a href="#">вакансии</a>
+							<a href="#">разработчики</a>
+							<a href="#">блог</a>
+							<a href="#">о нас</a>
+						</div>
+						<a href="#" class="footer_links_lang">Русский</a>
 					</div>
-					<div class="footer_links_sub">
-						<a href="#">центр поддержки</a>
-						<a href="#">вакансии</a>
-						<a href="#">разработчики</a>
-						<a href="#">блог</a>
-						<a href="#">о нас</a>
-					</div>
-					<a href="#" class="footer_links_lang">Русский</a>
 				</div>
 				<!-- footer links END -->
-				<div class="footer_mobile">
-					<a href="#"><img src="./image/store_icons/app_store.png" alt="App Store"></a>
-					<a href="#"><img src="./image/store_icons/google_play.png" alt="Google Play"></a>
-					<a href="#"><img src="./image/store_icons/windows_store.png" alt="Windows Store"></a>
+				<div>
+					<div class="footer_mobile">
+						<a href="#"
+							><img
+								src="./image/store_icons/app_store.png"
+								alt="App Store"
+						/></a>
+						<a href="#"
+							><img
+								src="./image/store_icons/google_play.png"
+								alt="Google Play"
+						/></a>
+						<a href="#"
+							><img
+								src="./image/store_icons/windows_store.png"
+								alt="Windows Store"
+						/></a>
+					</div>
 				</div>
 			</div>
 			<!-- wrapper footer block END -->
