--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="css/bootstrap-reboot.min.css" />
 		<link rel="stylesheet" href="css/bootstrap-grid.min.css" />
 		<link rel="stylesheet" href="css/style.min.css" />
+		<script src="https://kit.fontawesome.com/1301c65547.js" crossorigin="anonymous"></script>
 	</head>
 
 	<body>
