--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,10 @@
 		<link rel="stylesheet" href="css/bootstrap-reboot.min.css" />
 		<link rel="stylesheet" href="css/bootstrap-grid.min.css" />
 		<link rel="stylesheet" href="css/style.min.css" />
-		<script src="https://kit.fontawesome.com/1301c65547.js" crossorigin="anonymous"></script>
+		<script
+			src="https://kit.fontawesome.com/1301c65547.js"
+			crossorigin="anonymous"
+		></script>
 	</head>
 
 	<body>
@@ -474,29 +477,17 @@
 				<div>
 					<div class="footer_social">
 						<a href="#" class="footer_social_link"
-							><img
-								src="./image/social_icon/facebook.svg"
-								alt="facebook_icon"
-								class="footer_social_img"
-						/></a>
+							><i class="fab fa-facebook-f"></i
+						></a>
 						<a href="#" class="footer_social_link"
-							><img
-								src="./image/social_icon/twitter.svg"
-								alt="twitter_icon"
-								class="footer_social_img"
-						/></a>
+							><i class="fab fa-twitter"></i
+						></a>
 						<a href="#" class="footer_social_link"
-							><img
-								src="./image/social_icon/linkedin.svg"
-								alt="linkedin_icon"
-								class="footer_social_img"
-						/></a>
+							><i class="fab fa-linkedin"></i
+						></a>
 						<a href="#" class="footer_social_link"
-							><img
-								src="./image/social_icon/instagram.svg"
-								alt="instagram_icon"
-								class="footer_social_img"
-						/></a>
+							><i class="fab fa-instagram"></i
+						></a>
 					</div>
 				</div>
 				<!-- footer links start -->
