--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 		/>
 		<link rel="stylesheet" href="css/bootstrap-reboot.min.css" />
 		<link rel="stylesheet" href="css/bootstrap-grid.min.css" />
+		<link rel="stylesheet" href="css/fonts.css" />
 		<link rel="stylesheet" href="css/style.min.css" />
 		<script
 			src="https://kit.fontawesome.com/1301c65547.js"
@@ -477,7 +478,9 @@
 				<div>
 					<div class="footer_social">
 						<a href="#" class="footer_social_link"
-							><i class="fab fa-facebook-f"></i
+							><!-- <i class="fab fa-facebook-f"></i
+						> -->
+							<span class="icon-facebook"></span
 						></a>
 						<a href="#" class="footer_social_link"
 							><i class="fab fa-twitter"></i
