--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@
 		/>
 		<link rel="stylesheet" href="css/bootstrap-reboot.min.css" />
 		<link rel="stylesheet" href="css/bootstrap-grid.min.css" />
-		<link rel="stylesheet" href="css/fonts.css" />
+		<link rel="stylesheet" href="css/fontello.css" />
 		<link rel="stylesheet" href="css/style.min.css" />
-		<script
+		<!-- 		<script
 			src="https://kit.fontawesome.com/1301c65547.js"
 			crossorigin="anonymous"
-		></script>
+		></script> -->
 	</head>
 
 	<body>
@@ -477,19 +477,17 @@
 			<div class="footer_wrapper">
 				<div>
 					<div class="footer_social">
-						<a href="#" class="footer_social_link"
-							><!-- <i class="fab fa-facebook-f"></i
-						> -->
+						<a href="#" class="footer_social_link">
 							<span class="icon-facebook"></span
 						></a>
 						<a href="#" class="footer_social_link"
-							><i class="fab fa-twitter"></i
+							><span class="icon-twitter-bird"></span
 						></a>
 						<a href="#" class="footer_social_link"
-							><i class="fab fa-linkedin"></i
+							><span class="icon-linkedin-rect"></span
 						></a>
-						<a href="#" class="footer_social_link"
-							><i class="fab fa-instagram"></i
+						<a href="#" class="footer_social_link">
+							<span class="icon-instagram-filled"></span
 						></a>
 					</div>
 				</div>
