deleted icomoon font, rename delimetr at divider

--- a/src/index.html
+++ b/src/index.html
@@ -473,7 +473,7 @@
 		<!-- world section END -->
 		<!-- footer START -->
 		<footer class="footer">
-			<div class="footer_delimetr"></div>
+			<div class="footer_divider"></div>
 			<div class="footer_wrapper">
 				<div>
 					<div class="footer_social">
