addedd гамбургер в меню и script.js

--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,11 @@
 						</li>
 					</ul>
 				</div>
+				<div class="hamburger">
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
 			</nav>
 			<div class="subheader">
 				<div class="container">
@@ -532,5 +537,6 @@
 			</div>
 			<!-- wrapper footer block END -->
 		</footer>
+		<script src="js/script.js"></script>
 	</body>
 </html>
