--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
 			<div class="subheader">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-4 offset-md-1">
+						<div class="col-6 col-md-4 offset-md-1">
 							<a href="#" class="subheader_logo"
 								><img
 									src="/src/image/subheader/subheader_logo/subheader_logo.png"
@@ -74,7 +74,9 @@
 								Официальный партнер Uber в Москве
 							</div>
 						</div>
-						<div class="col-md-3 offset-md-1 col-xl-2 offset-xl-2">
+						<div
+							class="xs_hidden col-md-3 offset-md-1 col-xl-2 offset-xl-2"
+						>
 							<div class="subheader_call">
 								Звоните нам ежедневно
 							</div>
@@ -82,7 +84,12 @@
 								>8 495 797 09 88</a
 							>
 						</div>
-						<div class="col-md-3 col-lg-2">
+						<div class="col-6 col-md-3 col-lg-2">
+							<a
+								href="tel:84957970988"
+								class="xs_visible subheader_phone"
+								>8 495 797 09 88</a
+							>
 							<button class="subheader_btn">
 								заказать звонок
 							</button>
@@ -283,7 +290,7 @@
 		</section>
 		<!-- advantages section end -->
 		<!-- mobile app section start -->
-		<section class="mobile">
+		<!-- 		<section class="mobile">
 			<div class="container">
 				<div class="label">Возможности</div>
 				<h2 class="title">мобильное приложение убер</h2>
@@ -342,10 +349,10 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 		<!-- mobile app section END -->
 		<!-- section choice START  -->
-		<section class="choice">
+		<!-- 		<section class="choice">
 			<div class="container">
 				<div class="black_bg"></div>
 				<div class="label label_white">Возможности</div>
@@ -366,15 +373,15 @@
 					Лучше, быстрее и дешевле, чем такси
 				</div>
 			</div>
-		</section>
+		</section> -->
 		<!-- section choice END  -->
 		<!-- request section START-->
-		<section class="required">
+		<!-- <section class="required">
 			<div class="container">
 				<div class="label">Возможности</div>
 				<h2 class="title">условия и требования</h2>
 				<div class="row">
-					<!-- first required block start -->
+					
 					<div class="col-md-6">
 						<div class="required_block">
 							<h3 class="required_title">
@@ -403,8 +410,7 @@
 							</div>
 						</div>
 					</div>
-					<!-- first required block end -->
-					<!-- second required block start -->
+
 					<div class="col-md-6">
 						<div class="required_block">
 							<h3 class="required_title">
@@ -420,8 +426,7 @@
 							</ul>
 						</div>
 					</div>
-					<!-- second required block end -->
-					<!-- third required block start -->
+
 					<div class="col-md-6">
 						<div class="required_block warning">
 							<h3 class="required_title">ТРЕБОВАНИЕ:</h3>
@@ -439,8 +444,7 @@
 							</ul>
 						</div>
 					</div>
-					<!-- third required block end -->
-					<!-- fourth required block start -->
+
 					<div class="col-md-6">
 						<div class="required_block warning">
 							<h3 class="required_title">ДОКУМЕНТЫ:</h3>
@@ -457,15 +461,12 @@
 							</ul>
 						</div>
 					</div>
-					<!-- fourth required block end -->
 				</div>
-				<!-- class row bootstrap end -->
 			</div>
-			<!-- container class end -->
-		</section>
+		</section> -->
 		<!-- request section END -->
 		<!-- world section start -->
-		<section class="sities">
+<!-- 		<section class="sities">
 			<div class="container">
 				<div class="label label_white">города</div>
 				<h2 class="title title_white">По всему миру</h2>
@@ -474,10 +475,10 @@
 				</h3>
 				<a href="#" class="sities_link">посмотреть все города</a>
 			</div>
-		</section>
+		</section> -->
 		<!-- world section END -->
 		<!-- footer START -->
-		<footer class="footer">
+<!-- 		<footer class="footer">
 			<div class="footer_divider"></div>
 			<div class="footer_wrapper">
 				<div>
@@ -496,7 +497,7 @@
 						></a>
 					</div>
 				</div>
-				<!-- footer links start -->
+
 				<div>
 					<div class="footer_links">
 						<div class="footer_links_main">
@@ -514,7 +515,7 @@
 						<a href="#" class="footer_links_lang">Русский</a>
 					</div>
 				</div>
-				<!-- footer links END -->
+
 				<div>
 					<div class="footer_mobile">
 						<a href="#"
@@ -535,8 +536,7 @@
 					</div>
 				</div>
 			</div>
-			<!-- wrapper footer block END -->
-		</footer>
+		</footer> -->
 		<script src="js/script.js"></script>
 	</body>
 </html>
