adaptived blocks mobile, choice, required. It's ok

--- a/src/index.html
+++ b/src/index.html
@@ -290,7 +290,7 @@
 		</section>
 		<!-- advantages section end -->
 		<!-- mobile app section start -->
-		<!-- 		<section class="mobile">
+		<section class="mobile">
 			<div class="container">
 				<div class="label">Возможности</div>
 				<h2 class="title">мобильное приложение убер</h2>
@@ -299,7 +299,7 @@
 					используя свой мобильный телефон
 				</div>
 				<div class="row">
-					<div class="col-md-4">
+					<div class="col-md-6 col-lg-4">
 						<div class="mobile_item mobile_item_1">
 							<div class="mobile_item_subtitle">
 								оформление заказа одним касанием
@@ -307,7 +307,7 @@
 							<div class="mobile_item_plus"></div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-6 col-lg-4">
 						<div class="mobile_item mobile_item_2">
 							<div class="mobile_item_subtitle">
 								надежная подача
@@ -315,7 +315,7 @@
 							<div class="mobile_item_plus"></div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-6 col-lg-4">
 						<div class="mobile_item mobile_item_3">
 							<div class="mobile_item_subtitle">
 								прозрачные цены
@@ -323,7 +323,7 @@
 							<div class="mobile_item_plus"></div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-6 col-lg-4">
 						<div class="mobile_item mobile_item_4">
 							<div class="mobile_item_subtitle">
 								безналичная оплата
@@ -331,7 +331,7 @@
 							<div class="mobile_item_plus"></div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-6 col-lg-4">
 						<div class="mobile_item mobile_item_5">
 							<div class="mobile_item_subtitle">
 								обратная связь
@@ -339,7 +339,7 @@
 							<div class="mobile_item_plus"></div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-6 col-lg-4">
 						<div class="mobile_item mobile_item_6">
 							<div class="mobile_item_subtitle">
 								разделить стоимость поездки
@@ -349,10 +349,10 @@
 					</div>
 				</div>
 			</div>
-		</section> -->
+		</section>
 		<!-- mobile app section END -->
 		<!-- section choice START  -->
-		<!-- 		<section class="choice">
+		<section class="choice">
 			<div class="container">
 				<div class="black_bg"></div>
 				<div class="label label_white">Возможности</div>
@@ -373,10 +373,10 @@
 					Лучше, быстрее и дешевле, чем такси
 				</div>
 			</div>
-		</section> -->
+		</section>
 		<!-- section choice END  -->
 		<!-- request section START-->
-		<!-- <section class="required">
+		<section class="required">
 			<div class="container">
 				<div class="label">Возможности</div>
 				<h2 class="title">условия и требования</h2>
@@ -463,10 +463,10 @@
 					</div>
 				</div>
 			</div>
-		</section> -->
+		</section>
 		<!-- request section END -->
 		<!-- world section start -->
-<!-- 		<section class="sities">
+		<!-- 		<section class="sities">
 			<div class="container">
 				<div class="label label_white">города</div>
 				<h2 class="title title_white">По всему миру</h2>
@@ -478,7 +478,7 @@
 		</section> -->
 		<!-- world section END -->
 		<!-- footer START -->
-<!-- 		<footer class="footer">
+		<!-- 		<footer class="footer">
 			<div class="footer_divider"></div>
 			<div class="footer_wrapper">
 				<div>
