--- a/src/index.html
+++ b/src/index.html
@@ -381,7 +381,6 @@
 				<div class="label">Возможности</div>
 				<h2 class="title">условия и требования</h2>
 				<div class="row">
-					
 					<div class="col-md-6">
 						<div class="required_block">
 							<h3 class="required_title">
@@ -466,7 +465,7 @@
 		</section>
 		<!-- request section END -->
 		<!-- world section start -->
-		<!-- 		<section class="sities">
+		<section class="sities">
 			<div class="container">
 				<div class="label label_white">города</div>
 				<h2 class="title title_white">По всему миру</h2>
@@ -475,7 +474,7 @@
 				</h3>
 				<a href="#" class="sities_link">посмотреть все города</a>
 			</div>
-		</section> -->
+		</section>
 		<!-- world section END -->
 		<!-- footer START -->
 		<!-- 		<footer class="footer">
