адаптирован блок footer, мелк правки по стилям etc

--- a/src/index.html
+++ b/src/index.html
@@ -455,7 +455,7 @@
 								<li>Номер телефона</li>
 								<li>
 									Номер карты для перечисления денег(указать в
-									письме)!
+									<span class="span_adapt">письме</span>)!
 								</li>
 							</ul>
 						</div>
@@ -477,7 +477,7 @@
 		</section>
 		<!-- world section END -->
 		<!-- footer START -->
-		<!-- 		<footer class="footer">
+		<footer class="footer">
 			<div class="footer_divider"></div>
 			<div class="footer_wrapper">
 				<div>
@@ -519,12 +519,12 @@
 					<div class="footer_mobile">
 						<a href="#"
 							><img
-								src="./image/store_icons/app_store.png"
+								src="./image/store_icons/app_store.svg"
 								alt="App Store"
 						/></a>
 						<a href="#"
 							><img
-								src="./image/store_icons/google_play.png"
+								src="./image/store_icons/google_play.svg"
 								alt="Google Play"
 						/></a>
 						<a href="#"
@@ -535,7 +535,7 @@
 					</div>
 				</div>
 			</div>
-		</footer> -->
+		</footer>
 		<script src="js/script.js"></script>
 	</body>
 </html>
