установка favicon и добавление ссылок на разделы

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>Uber taxi</title>
+		<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 		<link
 			href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap&subset=cyrillic-ext"
 			rel="stylesheet"
@@ -28,17 +29,20 @@
 							<a href="#" class="header_nav_menu_link">Главная</a>
 						</li>
 						<li class="header_nav_menu_item">
-							<a href="#" class="header_nav_menu_link"
+							<a href="#required" class="header_nav_menu_link"
 								>Со своим автомобилем</a
 							>
 						</li>
 						<li class="header_nav_menu_item">
-							<a href="#" class="header_nav_menu_link"
+							<a href="#required" class="header_nav_menu_link"
 								>На автомобиле компании</a
 							>
 						</li>
 						<li class="header_nav_menu_item">
-							<a href="#" class="header_nav_menu_link"
+							<a
+								href="#requirement
+							"
+								class="header_nav_menu_link"
 								>Требования</a
 							>
 						</li>
@@ -376,7 +380,7 @@
 		</section>
 		<!-- section choice END  -->
 		<!-- request section START-->
-		<section class="required">
+		<section class="required" id="required">
 			<div class="container">
 				<div class="label">Возможности</div>
 				<h2 class="title">условия и требования</h2>
@@ -427,8 +431,10 @@
 					</div>
 
 					<div class="col-md-6">
-						<div class="required_block warning">
-							<h3 class="required_title">ТРЕБОВАНИЕ:</h3>
+						<div class="required_block warning" id="requirement">
+							<h3 class="required_title" id="requirement">
+								ТРЕБОВАНИЕ:
+							</h3>
 							<ul class="required_list">
 								<li>Наличие автомобиля без рекламы</li>
 								<li>
