deleded duplicate  id requirement index.html str 435

--- a/src/index.html
+++ b/src/index.html
@@ -432,7 +432,7 @@
 
 					<div class="col-md-6">
 						<div class="required_block warning" id="requirement">
-							<h3 class="required_title" id="requirement">
+							<h3 class="required_title">
 								ТРЕБОВАНИЕ:
 							</h3>
 							<ul class="required_list">
